Use KSystemEventFilter instead of QAbstractEventDispatcher

Using QAbstractEventDispatcher bypasses other filters installed
by KSystemEventFilter and breaks others who used KSystemEventFilter
to install their event handlers.

BUG: 312397
REVIEW: 108065